2014-02-10  Andy Buckley  <andy.buckley@cern.ch>

	* Removing unused HT increment and units in ATLAS_2012_I1180197 (unvalidated SUSY).

	* Fixing photon isolation logic bug in CMS_2013_I1258128 (Z rapidity).

	* Replacing internal uses of #include Rivet/Rivet.hh with
	Rivet/Config/RivetCommon.hh, removing the MAXRAPIDITY const, and
	repurposing Rivet/Rivet.hh as a convenience include for external
	API users.

	* Adding isStable, children, allDescendants, stableDescendants,
	and flightLength functions to Particle.

	* Replacing Particle and Jet deltaX functions with generic ones on
	ParticleBase, and adding deltaRap variants.

	* Adding a Jet.fhh forward declaration header, including fastjet::PseudoJet.

	* Adding a RivetCommon.hh header to allow Rivet.hh to be used externally.

	* Fixing HeavyHadrons to apply pT cuts if specified.

2014-02-06  Andy Buckley  <andy.buckley@cern.ch>

	* 2.1.0 release!

2014-02-05  Andy Buckley  <andy.buckley@cern.ch>

	* Protect against invalid prefix value if the --prefix configure option is unused.

2014-02-03  Andy Buckley  <andy.buckley@cern.ch>

	* Adding the ATLAS_2012_I1093734 fwd-bwd / azimuthal minbias correlations analysis.

	* Adding the LHCB_2013_I1208105 forward energy flow analysis.

2014-01-31  Andy Buckley  <andy.buckley@cern.ch>

	* Checking the YODA minimum version in the configure script.

	* Fixing the JADE_OPAL analysis ycut values to the midpoints,
	thanks to information from Christoph Pahl / Stefan Kluth.

2014-01-29  Andy Buckley  <andy.buckley@cern.ch>

	* Removing unused/overrestrictive Isolation* headers.

2014-01-27  Andy Buckley  <andy.buckley@cern.ch>

	* Re-bundling yaml-cpp, now built as a mangled static lib based on
	the LHAPDF6 experience.

	* Throw a UserError rather than an assert if AnalysisHandler::init
	is called more than once.

2014-01-22  Andy Buckley  <andy.buckley@cern.ch>

	* configure.ac: Remove opportunistic C++11 build, until this